--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
+    "downloadjs": "^1.4.7",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.62.1"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-query": "^1.2.9",
